# drmpp

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTORS  LICENSE  README.md  config.h.meson  meson.build  meson_options.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: clang-format.yaml  clang-tidy.yaml  codeql.yml  ubuntu-24.04.yml  ubuntu.yml
doc/doxygen/: Doxyfile
doc/sphinx/: conf.py  index.rst  requirements.txt
examples/: drm_caps.cc  drm_compositor.cc  drm_cursor.cc  drm_fb.cc  drm_gbm.cc  drm_hotplug.cc  drm_input.cc  drm_json.cc  drm_lz.cc  drm_modes.cc  drm_simple.cc  drm_snake.cc  meson.build
examples/lvgl/: README.md  drm_lvgl.cc  lv_conf.h  meson.build
examples/snake/: README.md  drm_snake.cc  meson.build  snake.cc  snake.h
examples/vulkan/: README.md  meson.build  vk_khr_inp.cc  vk_kms_inp.cc
include/drmpp/: buffer.h  composition.h  device.h  drmpp.h  output.h  utils.h
include/drmpp/cursor/: xcursor.h
include/drmpp/egl/: egl.h
include/drmpp/info/: info.h
include/drmpp/input/: asset.h  default_cursor.h  default_left_ptr.h  default_xkeymap.h  fastlz.h  keyboard.h  left_ptr_default.h  pointer.h  seat.h  touch.h  xkeymap_default.h  xkeymap_us_pc105.h
include/drmpp/kms/: device.h  output.h
include/drmpp/kms/info/: info.h
include/drmpp/logging/: logging.h
include/drmpp/plane/: plane.h
include/drmpp/shared_libs/: libdrm.h  libegl.h  libgbm.h  shared_library.h
include/drmpp/utils/: udev_monitor.h  utils.h  virtual_terminal.h
include/drmpp/vulkan/: vulkan_base.h  vulkan_khr.h  vulkan_kms.h
src/: buffer.cc  device.cc  meson.build  output.cc
src/cursor/: xcursor.cc
src/drm/: libdrm.cc
src/egl/: egl.cc  libegl.cc
src/gbm/: libgbm.cc
src/info/: info.cc
src/input/: fastlz.cc  keyboard.cc  pointer.cc  seat.cc  touch.cc
src/kms/: device.cc  output.cc
src/kms/info/: info.cc
src/plane/: plane.cc
src/shared_libs/: libdrm.cc  libegl.cc  libgbm.cc
src/utils/: udev_monitor.cc  virtual_terminal.cc
src/vulkan/: vulkan_base.cc  vulkan_khr.cc  vulkan_kms.cc
subprojects/: VERSIONS
subprojects/bsdrm/: meson.build
subprojects/bsdrm/example/: meson.build  stripe.c
subprojects/bsdrm/include/: bs_drm.h
subprojects/bsdrm/src/: alloc.c  app.c  debug.c  draw.c  drm_connectors.c  drm_fb.c  drm_open.c  drm_pipe.c  egl.c  gl.c  kms.c  mmap.c  open.c  pipe.c
subprojects/bsdrm/tests/: meson.build  stripe.cc
subprojects/imgui/: meson.build
subprojects/libdisplay-info/: .editorconfig  .gitlab-ci.yml  README.md  cta.c  displayid.c  edid.c  info.c  meson.build
subprojects/libdisplay-info/di-edid-decode/: cta.c  displayid.c  edid.c
subprojects/libdisplay-info/include/: cta.h  di-edid-decode.h  displayid.h  edid.h  info.h
subprojects/libdisplay-info/subprojects/: edid-decode.wrap
subprojects/libdisplay-info/test/: di-edid-print.c  edid-decode-check.sh  edid-decode-diff.sh  meson.build
subprojects/libdisplay-info/test/data/: README.md  acer-p1276.print  acer-p1276.ref  apple-xdr-dp.print  apple-xdr-dp.ref  ayaneo-wxga.diff  ayaneo-wxga.edid  ayaneo-wxga.print  ayaneo-wxga.ref  cta-timings.diff  cta-timings.ref  cta-vfpdb.diff  cta-vfpdb.edid  cta-vfpdb.print  cta-vfpdb.ref  custom-uncommon-cta-vesa.print  custom-uncommon-cta-vesa.ref  cvt.print  cvt.ref  dell-2408wfp-dp.print  dell-2408wfp-dp.ref  goldstar-e2441.diff  goldstar-e2441.edid  goldstar-e2441.print  goldstar-e2441.ref  goldstar-ite6604-hdmi.diff  goldstar-ite6604-hdmi.print  goldstar-ite6604-hdmi.ref  hitachi-55r6+.diff  hitachi-55r6+.print  hitachi-55r6+.ref  hp-5dq99aa-hdmi.diff  hp-5dq99aa-hdmi.print  hp-5dq99aa-hdmi.ref  msi-mag321curv-dp.diff  msi-mag321curv-dp.print  msi-mag321curv-dp.ref  panasonic-mei96a2-dp.print  panasonic-mei96a2-dp.ref  philips-ftv-2017.diff  (+25 more)
subprojects/libdisplay-info/tool/: dump-i2c.sh
subprojects/rapidjson/: meson.build
subprojects/sync/: meson.build  sync.c
subprojects/sync/include/android/: sync.h
subprojects/sync/include/ndk/: sync.h
tests/: atomictest.cc  dmabuf_test.cc  drm_cursor_test.cc  gamma_test.cc  gbmtest.cc  linear_bo_test.cc  mapped_texture_test.cc  meson.build  mmap_test.cc  plane_test.cc  swrast_test.cc  udmabuf_create_test.cc  vk_glow.cc  yuv_to_rgb_test.cc
tools/: drm-debug.sh
