option('vulkan',
       type : 'boolean',
       value : true,
       description : 'build vulkan support'
)

option('examples',
       type : 'boolean',
       value : true,
       description : 'build client examples'
)

option('lvgl-examples',
       type : 'boolean',
       value : true,
       description : 'build LVGL examples'
)
