executable('vk-khr-inp', [
               'vk_khr_inp.cc',
           ],
           dependencies : [
               cxxopts_dep,
               drmp_dep,
               vulkan_dep,
               vulkan_headers_dep,
               dl_dep,
           ],
           install : false,
)

executable('vk-kms-inp', [
               'vk_kms_inp.cc',
           ],
           dependencies : [
               cxxopts_dep,
               drmp_dep,
               vulkan_dep,
               vulkan_headers_dep,
               dl_dep,
           ],
           install : false,
)
